--- a/kızartmatarifi.html
+++ b/kızartmatarifi.html
@@ -16,9 +16,9 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
-                <button><li><a href="#">home</a></li></button>
+               
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -39,7 +39,7 @@
         <h1 class="heading"> <span>kızartma tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="patates.jpg" alt="about" width="500" height="320">
+                <img src="resim//patates.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>patates kızartması</h5>
@@ -63,7 +63,7 @@
         <h1 class="heading"> <span>kızartma tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="soğan.jpg" alt="about" width="500" height="320">
+                <img src="resim//soğan.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>soğan halkası</h5>
@@ -84,7 +84,7 @@
         <h1 class="heading"> <span>kızartma tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="karides.jpg" alt="about" width="500" height="320">
+                <img src="resim//karides.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>çıtır karides</h5>
@@ -101,7 +101,7 @@
         <h1 class="heading"><span>kızartma tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="tavuk.jpg" alt="about" width="500" height="320">
+                <img src="resim//tavuk.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>çıtır göğüs</h5>
@@ -120,19 +120,17 @@
      <!--footer başlangıç-->
      <section class="footer">
         <div class="paylas">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div>
-        <div class="links"> 
-            <a href="#">home</a>
-            <a href="#">hakkında</a>
-            <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ileti%C5%9Fim.html" target="_blank">iletişim</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ba%C5%9Fvuru.html#ba%C5%9Fvuru.html" 
-            target="_blank">başvuru</a>
-        </div>
+           <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
+           <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
+           <a href="https://www.instagram.com/moodyscafe/" class="fab fa-instagram"></a>
+       </div> 
+       <div class="links"> 
+           <a href="#sipgit">menü</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           target="_blank">başvuru</a>
+       </div>
         <div class="aciklama">
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
