--- a/makarna.html
+++ b/makarna.html
@@ -16,9 +16,8 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
-                <button><li><a href="#">home</a></li></button>
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -40,42 +39,42 @@
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="makarna1.jpg" alt="" width="300em">
+                <img src="resim//makarna1.jpg" alt="" width="300em">
                 <h3>salçalı makarna</h3>
                 <div class="fiyat">39.99tl<span>49.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="makarna.jpg" alt="" width="300em">
+                <img src="resim//makarna.jpg" alt="" width="300em">
                 <h3>kremalı makarna</h3>
                 <div class="fiyat">49.99tl<span>59.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="makarna2.jpg" alt="" width="300em">
+                <img src="resim//makarna2.jpg" alt="" width="300em">
                 <h3>mantar soslu makarna</h3>
                 <div class="fiyat">59.99tl<span>69.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="makarna3.jpg" alt="" width="300em">
+                <img src="resim//makarna3.jpg" alt="" width="300em">
                 <h3>pesto soslu makarna</h3>
                 <div class="fiyat">59.99tl<span>69.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
         </div>
@@ -83,19 +82,17 @@
     <!--footer başlangıç-->
     <section class="footer">
         <div class="paylas">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div>
-        <div class="links"> 
-            <a href="#">home</a>
-            <a href="#">hakkında</a>
-            <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ileti%C5%9Fim.html" target="_blank">iletişim</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ba%C5%9Fvuru.html#ba%C5%9Fvuru.html" 
-            target="_blank">başvuru</a>
-        </div>
+           <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
+           <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
+           <a href="https://www.instagram.com/moodyscafe/" class="fab fa-instagram"></a>
+       </div> 
+       <div class="links"> 
+           <a href="#sipgit">menü</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           target="_blank">başvuru</a>
+       </div>
         <div class="aciklama">
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
