--- a/pizzatarifi.html
+++ b/pizzatarifi.html
@@ -18,7 +18,7 @@
                 <ul>
                 <button><li><a href="#">home</a></li></button>
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -40,7 +40,7 @@
         <h1 class="heading"> <span>pizza tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="pizzaödev.jpg" alt="about" width="500" height="320">
+                <img src="resim//pizzaödev.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>karışık pizza</h5>
@@ -66,7 +66,7 @@
         <h1 class="heading"> <span>pizza tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="pizza1.jpg" alt="about" width="500" height="320">
+                <img src="resim//pizza1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>biberli pizza</h5>
@@ -89,7 +89,7 @@
         <h1 class="heading"> <span>pizza tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="pizza2.jpg" alt="about" width="500" height="320">
+                <img src="resim//pizza2.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>özel soslu pizza</h5>
@@ -119,7 +119,7 @@
         <h1 class="heading"><span>pizza tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="pizza3.jpg" alt="about" width="500" height="320">
+                <img src="resim//pizza3.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>yumurtalı pizza</h5>
@@ -148,7 +148,7 @@
             <a href="#">home</a>
             <a href="#">hakkında</a>
             <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ileti%C5%9Fim.html" target="_blank">iletişim</a>
+            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
             <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/konum.html" target="_blank">konum</a>
             <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ba%C5%9Fvuru.html#ba%C5%9Fvuru.html" 
             target="_blank">başvuru</a>
