--- a/çorbatarifi.html
+++ b/çorbatarifi.html
@@ -16,9 +16,9 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
-                <button><li><a href="#">home</a></li></button>
+                
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -38,7 +38,7 @@
         <h1 class="heading"> <span>kabak çorbası tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="kabakçorbası.jpg" alt="about" width="500" height="320">
+                <img src="resim//kabakçorbası.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>kabak çorbası</h5>
@@ -61,7 +61,7 @@
         <h1 class="heading"> <span>mantar çorbası tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="ezogelinçorba.jpg" alt="about" width="500" height="320">
+                <img src="resim//ezogelinçorba.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>mantar çorbası</h5>
@@ -79,7 +79,7 @@
         <h1 class="heading"> <span>ezogelin çorbası tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="mantarçorbası.jpg" alt="about" width="500" height="320">
+                <img src="resim//mantarçorbası.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>ezogelin çorba</h5>
@@ -103,7 +103,7 @@
         <h1 class="heading"><span>balkabağı çorbası tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="balkabağı.jpg" alt="about" width="500" height="320">
+                <img src="resim//balkabağı.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>balkabağı çorbası</h5>
@@ -120,19 +120,17 @@
      <!--footer başlangıç-->
      <section class="footer">
         <div class="paylas">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div>
-        <div class="links"> 
-            <a href="#">home</a>
-            <a href="#">hakkında</a>
-            <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ileti%C5%9Fim.html" target="_blank">iletişim</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ba%C5%9Fvuru.html#ba%C5%9Fvuru.html" 
-            target="_blank">başvuru</a>
-        </div>
+           <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
+           <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
+           <a href="https://www.instagram.com/moodyscafe/" class="fab fa-instagram"></a>
+       </div> 
+       <div class="links"> 
+           <a href="#sipgit">menü</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           target="_blank">başvuru</a>
+       </div>
         <div class="aciklama">
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
