--- a/anayemek.html
+++ b/anayemek.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>restaurant</title>
     <link rel="stylesheet" href="ödev.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header class="header">
@@ -16,9 +17,9 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
-                <button><li><a href="#">home</a></li></button>
+               
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -40,42 +41,42 @@
         <div class="box-conteiner">
             <div class="box">
                 <div class="box-head">
-                <img src="et1.jpg" alt="" width="300em">
+                <img src="resim//et1.jpg" alt="" width="300em">
                 <h3>dana bonfile</h3>
                 <div class="fiyat">104.99tl<span>119.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="et3.jpg" alt="" width="300em">
+                <img src="resim//et3.jpg" alt="" width="300em">
                 <h3>özel soslu döş</h3>
                 <div class="fiyat">109.99tl<span>129.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="tavukızgara.jpg" alt="" width="300em">
+                <img src="resim//tavukızgara.jpg" alt="" width="300em">
                 <h3>ızgara kanat</h3>
                 <div class="fiyat">59.99tl<span>79.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
             <div class="box">
                 <div class="box-head">
-                <img src="tavuk1.jpg" alt="" width="300em">
+                <img src="resim//tavuk1.jpg" alt="" width="300em">
                 <h3>sebzeli göğüs ızgara</h3>
                 <div class="fiyat">39.99tl<span>59.99tl</span></div>
                 </div>
                 <div class="box-bottom">
-                    <a href="#" class="btn">sepete ekle</a>
+                    <a href="#" class="btn"onclick="siparis()">sepete ekle</a>
                 </div>
             </div>
         </div>
@@ -83,19 +84,17 @@
     <!--footer başlangıç-->
     <section class="footer">
         <div class="paylas">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div>
-        <div class="links"> 
-            <a href="#">home</a>
-            <a href="#">hakkında</a>
-            <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ileti%C5%9Fim.html" target="_blank">iletişim</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/kopya/ba%C5%9Fvuru.html#ba%C5%9Fvuru.html" 
-            target="_blank">başvuru</a>
-        </div>
+           <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
+           <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
+           <a href="https://www.instagram.com/moodyscafe/" class="fab fa-instagram"></a>
+       </div> 
+       <div class="links"> 
+           <a href="#sipgit">menü</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           target="_blank">başvuru</a>
+       </div>
         <div class="aciklama">
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
