--- a/tarifler.html
+++ b/tarifler.html
@@ -16,9 +16,9 @@
                     <img src="pngwing.com (1).png" alt="logo" >
                 </a>
                 <ul>
-                <button><li><a href="#">home</a></li></button>
+             
                 <button><li><a href="#sipgit">menü</a></li></button>
-                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a></li></button>
+                <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a></li></button>
                 <button><li><a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a></li></button>
             </ul>
             <button type="button">tarifler</button>
@@ -30,7 +30,7 @@
         <h1 class="heading"> <span>çorba tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="kabakçorbası.jpg" alt="about" width="500" height="320">
+                <img src="resim//kabakçorbası.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>kabak çorbası</h5>
@@ -52,7 +52,7 @@
         <h1 class="heading"> <span>kızartma tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="patates.jpg" alt="about" width="500" height="320">
+                <img src="resim//patates.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>patates kızartması</h5>
@@ -75,7 +75,7 @@
         <h1 class="heading"> <span>sandviç tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="sandviç.jpg" alt="about" width="500" height="320">
+                <img src="resim//sandviç.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>kruvasan sandviç</h5>
@@ -94,7 +94,7 @@
         <h1 class="heading"> <span>hamburger tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="hamburger.jpg" alt="about" width="500" height="320">
+                <img src="resim//hamburger.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>hamburger menü</h5>
@@ -134,7 +134,7 @@
         <h1 class="heading"> <span>pizza tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="pizzaödev.jpg" alt="about" width="500" height="320">
+                <img src="resim//pizzaödev.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>pizza tarifimiz</h5>
@@ -155,7 +155,7 @@
         <h1 class="heading"> <span>makarna tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="makarna.jpg" alt="about" width="500" height="320">
+                <img src="resim//makarna.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>kremalı makarna</h5>
@@ -177,7 +177,7 @@
         <h1 class="heading"> <span>ana yemek tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="et1.jpg" alt="about" width="500" height="320">
+                <img src="resim//et1.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>dana bonfile</h5>
@@ -200,7 +200,7 @@ Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ö
         <h1 class="heading"> <span>salata tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="soyalısalata.jpg" alt="about" width="500" height="320">
+                <img src="resim//soyalısalata.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>soyalı salata</h5>
@@ -217,7 +217,7 @@ Son aşamada ıspanaklar ve sos ve biberler ile birleştirilir. Ispanakların ö
         <h1 class="heading"> <span>tatlı tarifimiz</span> </h1>
         <div class="row">
             <div class="image">
-                <img src="tatlı.jpg" alt="about" width="500" height="320">
+                <img src="resim//tatlı.jpg" alt="about" width="500" height="320">
             </div>
             <div class="content">
                 <h5>çilekli soğuk tatlı</h5>
@@ -234,18 +234,17 @@ Hazır olan çilekli milkshake’i bardaklara paylaştıralım.
      <!--footer başlangıç-->
      <section class="footer">
         <div class="paylas">
-            <a href="#" class="fab fa-facebook"></a>
-            <a href="#" class="fab fa-twitter"></a>
-            <a href="#" class="fab fa-instagram"></a>
-        </div> 
-        <div class="links"> 
-            <a href="#">home</a>
-            <a href="#">menü</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fim.html" target="_blank">iletişim</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
-            <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
-            target="_blank">başvuru</a>
-        </div>
+           <a href="https://tr-tr.facebook.com/MoodysCafe/" class="fab fa-facebook"></a>
+           <a href="https://mobile.twitter.com/moodyscafe" class="fab fa-twitter"></a>
+           <a href="https://www.instagram.com/moodyscafe/" class="fab fa-instagram"></a>
+       </div> 
+       <div class="links"> 
+           <a href="#sipgit">menü</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ileti%C5%9Fimformu.html" target="_blank">iletişim</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/konum.html" target="_blank">konum</a>
+           <a href="file:///C:/Users/tezge/OneDrive/Masa%C3%BCst%C3%BC/finaldeneme/ba%C5%9Fvuru.html" 
+           target="_blank">başvuru</a>
+       </div>
         <div class="aciklama">
         bizimle çalışmak isterseniz <span>başvuru forumunu</span> doldurunuz
         </div>
